# P3_HackABoss

./: Dockerfile.txt  Home.py  Pipfile  environment.bak.yml  environment.yml  inicio.py  packages.txt  pyproject.toml  reco.py  requirements.txt  setup.sh
pages/: 1WebScrapingBSETL.py  1WebScrapingETL.py  Detector.py  Recomendador.py  Scrap.py  detection.py  plots.py  pruebascra.py  recomend.py
pages/pages/: plots.py
